# modak

./: .gitignore  Cargo.toml  demo.py  pyproject.toml  viz.py
.github/workflows/: release.yml
modak/: __init__.py  __init__.pyi  monitor.py
src/: lib.rs  queue_app.rs
src/modak/: __init__.py  graph.py  monitor.py  text.py
