[project]
name = "modak"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "denehoffman", email = "denehoffman@me.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.5",
    "textual>=3.2.0",
    "tzlocal>=5.3.1",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
