[project]
name = "modak"
version = "0.1.0"
description = "A simple, opinionated task manager"
readme = "README.md"
authors = [{ name = "Dene Hoffman", email = "denehoffman@me.com" }]
requires-python = ">=3.13"
dependencies = [
  "numpy>=2.2.5",
  "textdraw>=0.1.2",
  "textual>=3.2.0",
  "tzlocal>=5.3.1",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project.scripts]
modak = "modak.monitor:main"
